--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # 分析関連
 pandas==1.2.3
 numpy==1.20.2
+# リトライ用
+retrying==1.3.3
 # DI(Dependency Injection/依存性注入)
 injector==0.18.4
 # 仮想通貨取引所のAPIクライアント
